<resources>
    <string name="app_name">chillMe</string>
    <string name="title_home">Home</string>
    <string name="music_button">Music</string>
    <string name="breathe_button">Breathe</string>
    <string name="jokes_button">Jokes</string>
    <string name="help_button">Help</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="questionMarks">\???</string>
    <string name="showMeMore">Show Me Another Joke</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome Back!</string>
    <string name="howAreYou">Tell Chill Pepper, how are you feeling today:</string>
    <string name="hint">Add today\'s entry</string>
    <string name="add">Add</string>
    <string name="goToMain">Back To Chill</string>
    <string name="profileButton">My Profile</string>

    <string name="breathing_module_name">Breathing Module</string>
    <string name="b1">Sama Vritti</string>
    <string name="b1s1">begin this exercise by sitting upright</string>
    <string name="b1s2">the nature of this exercise is equal breathing</string>
    <string name="b1s3">breathe in through your nose for 4 counts</string>
    <string name="b1s4">breathe out through your nose for 4 counts</string>
    <string name="b1s5">repeat these steps until you feel \n calm enough to continue your day</string>
    <string name="b2">Diaphragmatic</string>
    <string name="b2s1">begin this exercise by sitting upright and placing \n one hand on your tummy if you \n feel okay to do so</string>
    <string name="b2s2">although posture is important for this \n breathing technique, try to remain in \n a position that is comfortable for \n your body and soul</string>
    <string name="b2s3">breathe in through your nose \n for two seconds then purse your \n lips and exhale for two seconds</string>
    <string name="b2s4">try to direct all the motion \n to your tummy moving \n in an out while keeping your \n chest as still as possible</string>
    <string name="b2s5">repeat these steps until you feel \n calm enough to continue your day</string>

    <string name="title_activity_sama__vritti__module">Sama_Vritti_Module</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_sama_vritti">SamaVrittiActivity</string>
    <string name="title_activity_diaphragmatic">DiaphragmaticActivity</string>


    <string name="help_heading">Additional Resources</string>
    <string name="SevenCupsDescription">7Cups is a free anonymous online chat service that connects you to an empathetic listener.</string>
    <string name="SevenCupsHead">7Cups</string>
    <string name="SevenCupsLink">https://www.7cups.com/</string>
    <string name="CrisisServicesCanada">If you are experiencing suicidal thoughts, Crisis Services Canada can connect you to a trained responder through text or phone. They also have support services for anyone worried about a loved one.</string>
    <string name="crisisServicesCanadaLink">https://www.crisisservicescanada.ca/en/</string>
    <string name="crisisServicesCanadaHead">Crisis Services Canada</string>
    <string name="spiralsLink">https://bit.ly/2Ix137c</string>
    <string name="spiralTitle">Interactive Spiral Art</string>
    <string name="spiralDescription">Create spiral art in browser</string>
    <string name="LollipopTitle">Video: Leading With Lollipops</string>
    <string name="LollipopLink">https://www.youtube.com/watch?v=hVCBrkrFrBE</string>
    <string name="LollipopDes">A TED Talk about the massive positive impact that small interactions can have on the lives of others</string>
    <string name="rockVideo">Relaxing Video</string>
    <string name="rockLink">https://www.youtube.com/watch?v=v3zcL3bOiuM</string>
    <string name="rockDes">A relaxing and meditative video depicting rock balancing</string>
    <string name="SlamTitle">Video: Uplifting Slam Poetry</string>
    <string name="SlamLink">https://www.youtube.com/watch?v=8EUZnIVaIos</string>
    <string name="SlamDes">Slam poet encourages the audience to do good things, and change the world for the better</string>
    <string name="selfHelpTitle">Advice on Getting Out Of a Funk</string>
    <string name="selfHelpLink">https://www.youtube.com/watch?v=7XFLTDQ4JMk</string>
    <string name="waterTitle">Philosophy on Stress</string>
    <string name="waterLink">https://www.youtube.com/watch?v=q88TFQ9PrP0</string>
    <string name="waterDes">A professor uses an analogy about water bottles to explain how stress can impact us, and why it is so damaging in the long term</string>
    <string name="selfHelpDes">A video offering advice and perspective on surviving hard times and getting out of a rut </string>
    <string name="chooseActivity">choose an activity!</string>
    <string-array name="b1_arr">
        <item>begin this exercise by sitting upright</item>
        <item>the nature of this exercise is equal breathing</item>
        <item>breathe in through your nose for 4 counts</item>
        <item>breathe out through your nose for 4 counts</item>
        <item>repeat these steps until you feel \n calm enough to continue your day</item>
    </string-array>

    <string-array name="b2_arr">
        <item>begin this exercise by sitting upright and placing \n one hand on your tummy if you \n feel okay to do so</item>
        <item>although posture is important for this \n breathing technique, try to remain in \n a position that is comfortable for \n your body and soul</item>
        <item>breathe in through your nose \n for two seconds then purse your \n lips and exhale for two seconds</item>
        <item>try to direct all the motion \n to your tummy moving \n in an out while keeping your \n chest as still as possible</item>
        <item>repeat these steps until you feel \n calm enough to continue your day</item>
    </string-array>
</resources>
